--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,166 @@
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display:wght@300&family=Press+Start+2P&display=swap');
+
 body {
     background-color: black;
     color: white;
+    font-family: 'Press Start 2P', cursive;
+    animation: fadeIn 3s;
+    background-image: url("pixelback.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes flicker {
+    0% {
+        opacity: 0;
+    }
+    5% {
+        opacity: 1;
+        color: rgb(119, 250, 148);
+    }
+    10% {
+        opacity: 0.5;
+        color: red;
+    }
+    15% {
+        opacity: 1;
+        color: rgb(119, 250, 148);
+    }
+    20% {
+        opacity: 0.5;
+        color: red;
+    }
+    30% {
+        opacity: 1;
+        color: rgb(119, 250, 148);
+    }
+    35% {
+        opacity: 0.5;
+        color: red;
+    }
+    40% {
+        opacity: 1;
+        color: rgb(119, 250, 148);
+    }
+    45% {
+        opacity: 0.5;
+        color: red;
+    }
+    50% {
+        opacity: 1;
+        color: rgb(119, 250, 148);
+    }
+    60% {
+        opacity: 0.5;
+        color: red;
+    }
+    65% {
+        opacity: 1;
+        color: rgb(104, 104, 230);
+    }
+    70% {
+        opacity: 0.5;
+        color: red;
+    }
+    75% {
+        opacity: 1;
+        color: rgb(104, 104, 230);
+    }
+    80% {
+        opacity: 0.5;
+        color: red;
+    }
+    90% {
+        opacity: 1;
+        color:rgb(104, 104, 230);
+    }
+    95% {
+        opacity: 0.5;
+        color: red;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.linksDiv {
+    overflow: hidden;
+    background-color: rgb(104, 104, 230);
+    height: 100px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 0px 0;
+}
+
+.link {
+    display: block;
+    text-align: center;
+    color: white;
+    font-size: 30px;
+    margin: 40px;
+    text-decoration: none;
+}
+
+.link:hover {
+    color: rgb(236, 126, 126);
+    cursor: pointer;
+}
+
+.link:active {
+    color: red;
+}
+
+#name {
+    animation: flicker 1s;
+    animation-delay: 1s;
+    margin-top: 200px;
+    padding: 100px 0;
+    font-size: 60px;
+    text-align: center;
+    letter-spacing: 5px;
+}
+
+#heading {
+    text-align: center;
+    margin-top: -100px;
+    font-size: 25px;
+    animation: flicker 1s;
+    animation-delay: 1.5s;
+}
+
+.mainDiv {
+    margin-top: -100px;
+}
+
+#top {
+    top: 0;
+}
+
+#about {
+    animation: flicker 1s;
+    animation-delay: 1s;
+    font-size: 60px;
+    text-align: center;
+    letter-spacing: 5px;
+}
+
+#aboutDiv {
+    margin-left: 200px;
+    margin-right: 200px;
 }
