--- a/stylesheet.css
+++ b/stylesheet.css
@@ -106,6 +106,7 @@ body {
     top: 0;
     left: 0;
     padding: 0px 0;
+    position: fixed;
 }
 
 .link {
@@ -163,4 +164,20 @@ body {
 #aboutDiv {
     margin-left: 200px;
     margin-right: 200px;
+}
+
+#contact {
+    animation: flicker 1s;
+    animation-delay: 1s;
+    font-size: 60px;
+    text-align: center;
+    letter-spacing: 5px;
+}
+
+#projects {
+    animation: flicker 1s;
+    animation-delay: 1s;
+    font-size: 60px;
+    text-align: center;
+    letter-spacing: 5px;
 }
