--- a/stylesheet.css
+++ b/stylesheet.css
@@ -182,3 +182,30 @@ body {
     text-align: center;
     letter-spacing: 5px;
 }
+
+.linksDiv .icon {
+    display: none;
+}
+
+@media screen and (max-width: 900px) {
+    .link:not(:first-child) {display: none;}
+    .link.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+    @media screen and (max-width: 600px) {
+        .linksDiv.responsive {position: relative;}
+        .linksDiv.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .link.responsive {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+}
