--- a/stylesheet.css
+++ b/stylesheet.css
@@ -202,7 +202,7 @@ body {
 }
   
 @media screen and (max-width: 1300px) {
-    .navbar.responsive {position: relative;}
+    .navbar.responsive {position: fixed;}
     .navbar.responsive a.icon {
     position: absolute;
     right: 0;
@@ -288,4 +288,14 @@ body {
     #projects {
         font-size: 3vw;
     }
+}
+
+/* feedback link */
+.feedbackLink {
+    color: white;
+    margin-top: 20px;
+}
+
+.feedbackLink:hover {
+    animation: flicker 1s;
 }
