--- a/stylesheet.css
+++ b/stylesheet.css
@@ -203,6 +203,11 @@ body {
       float: right;
       display: block;
     }
+    .izum {
+        float: none;
+        display: block;
+        height: 20px;
+    }
 }
   
 @media screen and (max-width: 1300px) {
