--- a/stylesheet.css
+++ b/stylesheet.css
@@ -286,7 +286,7 @@ body {
 
 @media screen and (max-width: 500px) {
     body {
-        background-size: auto;
+        background-size: 100% 100%;
         background-attachment: fixed;
     }
 
