--- a/stylesheet.css
+++ b/stylesheet.css
@@ -286,8 +286,8 @@ body {
 
 @media screen and (max-width: 500px) {
     body {
-        background-size: 100% 100%;
-        background-attachment: fixed;
+        background-image: none;
+        background-color: rgb(144, 126, 241);
     }
 
     #name {
