--- a/stylesheet.css
+++ b/stylesheet.css
@@ -101,6 +101,21 @@ body {
     }
 }
 
+@keyframes bounce {
+    from {
+        padding-bottom: none;
+        letter-spacing: 5px;
+    }
+    80% {
+        padding-bottom: none;
+        letter-spacing: 10px;
+    }
+    to {
+        padding-bottom: none;
+        letter-spacing: 5px;
+    }
+}
+
 /* everything controlling the navbar */
 
 .navbar {
@@ -137,18 +152,26 @@ body {
     animation: flicker 1s;
     animation-delay: 1s;
     margin-top: 200px;
-    padding: 100px 0;
+    padding-top: 100px;
     font-size: 60px;
     text-align: center;
     letter-spacing: 5px;
 }
 
+#name:active {
+    animation: bounce 0.2s;
+}
+
 #heading {
     text-align: center;
-    margin-top: -100px;
+    padding-top: 100px;
     font-size: 25px;
     animation: flicker 1s;
     animation-delay: 1.5s;
+}
+
+#heading:active {
+    animation: bounce 0.2s;
 }
 
 .mainDiv {
@@ -189,14 +212,6 @@ body {
 
 #projects:hover {
     animation: flicker 1s;
-}
-
-.projectLink:hover {
-    color: rgb(236, 126, 126);
-}
-
-.projectLink:active {
-    color: red;
 }
 
 /* the menu decreasing for when changing screen size */
@@ -257,7 +272,7 @@ body {
     #projects {
         font-size: 40px;
     }
-    .projectLink {
+    .projectLink1, .projectLink2 {
         font-size: 20px;
     }
     .feedbackLink {
@@ -287,7 +302,10 @@ body {
     #projects {
         font-size: 3vw;
     }
-    .projectLink {
+    .projectLink1 {
+        font-size: 2vw;
+    }
+    .projectLink2 {
         font-size: 2vw;
     }
 }
@@ -318,7 +336,7 @@ body {
     #projects {
         font-size: 3vw;
     }
-    .projectLink {
+    .projectLink1, .projectLink2 {
         font-size: 2vw;
     }
     
@@ -346,7 +364,6 @@ body {
         padding-top: -1000px;
         margin-top: -500px;
     }
-
 }
 
 /* feedback link */
@@ -364,15 +381,17 @@ body {
 }
 
 /* project links */
-.projectLink {
+.projectLink1, .projectLink2 {
     color: white;
     text-decoration: none;
+    vertical-align: middle;
+    line-height: 70px;
 }
 
-.project1 {
-    margin-top: auto;
+.projectLink1:hover, .projectLink2:hover {
+    color: rgb(236, 126, 126);
 }
 
-.project2 {
-    margin-top: 20px;
+.projectLink1:active, .projectLink2:active {
+    color: red;
 }
